# SwitchMovie

./: .gitignore  CMakeLists.txt  README.md  boxplot.py  config.ini  config_test.ini  make_graph.py
cmake/: Boost.cmake  Ceres.cmake  MathGL.cmake  OpenCV2.cmake  OpenCV3.cmake  OpenMVG.cmake  RealSense2.cmake  TBB.cmake  dlib.cmake
globfeat/20181205Blue/: hsv_histogram_0.xml  hsv_histogram_1.xml  hsv_histogram_10.xml  hsv_histogram_11.xml  hsv_histogram_12.xml  hsv_histogram_13.xml  hsv_histogram_14.xml  hsv_histogram_15.xml  hsv_histogram_16.xml  hsv_histogram_17.xml  hsv_histogram_18.xml  hsv_histogram_19.xml  hsv_histogram_2.xml  hsv_histogram_20.xml  hsv_histogram_21.xml  hsv_histogram_22.xml  hsv_histogram_23.xml  hsv_histogram_24.xml  hsv_histogram_25.xml  hsv_histogram_26.xml  hsv_histogram_27.xml  hsv_histogram_28.xml  hsv_histogram_29.xml  hsv_histogram_3.xml  hsv_histogram_30.xml  hsv_histogram_31.xml  hsv_histogram_32.xml  hsv_histogram_33.xml  hsv_histogram_34.xml  hsv_histogram_35.xml  hsv_histogram_36.xml  hsv_histogram_37.xml  hsv_histogram_38.xml  hsv_histogram_39.xml  hsv_histogram_4.xml  hsv_histogram_40.xml  hsv_histogram_41.xml  hsv_histogram_42.xml  hsv_histogram_43.xml  hsv_histogram_44.xml  (+51 more)
globfeat/6cam/: hsv_histogram_1.xml  hsv_histogram_10.xml  hsv_histogram_100.xml  hsv_histogram_101.xml  hsv_histogram_102.xml  hsv_histogram_103.xml  hsv_histogram_104.xml  hsv_histogram_105.xml  hsv_histogram_106.xml  hsv_histogram_107.xml  hsv_histogram_108.xml  hsv_histogram_109.xml  hsv_histogram_110.xml  hsv_histogram_111.xml  hsv_histogram_112.xml  hsv_histogram_113.xml  hsv_histogram_114.xml  hsv_histogram_115.xml  hsv_histogram_116.xml  hsv_histogram_117.xml  hsv_histogram_118.xml  hsv_histogram_119.xml  hsv_histogram_120.xml  hsv_histogram_121.xml  hsv_histogram_122.xml  hsv_histogram_123.xml  hsv_histogram_124.xml  hsv_histogram_125.xml  hsv_histogram_126.xml  hsv_histogram_127.xml  hsv_histogram_128.xml  hsv_histogram_129.xml  hsv_histogram_13.xml  hsv_histogram_130.xml  hsv_histogram_131.xml  hsv_histogram_132.xml  hsv_histogram_133.xml  hsv_histogram_134.xml  hsv_histogram_135.xml  hsv_histogram_136.xml  (+498 more)
globfeat/Blue/: hsv_histogram_0.xml  hsv_histogram_11.xml  hsv_histogram_12.xml  hsv_histogram_15.xml  hsv_histogram_16.xml  hsv_histogram_17.xml  hsv_histogram_18.xml  hsv_histogram_19.xml  hsv_histogram_2.xml  hsv_histogram_21.xml  hsv_histogram_24.xml  hsv_histogram_29.xml  hsv_histogram_30.xml  hsv_histogram_301.xml  hsv_histogram_302.xml  hsv_histogram_303.xml  hsv_histogram_307.xml  hsv_histogram_308.xml  hsv_histogram_309.xml  hsv_histogram_310.xml  hsv_histogram_311.xml  hsv_histogram_312.xml  hsv_histogram_315.xml  hsv_histogram_317.xml  hsv_histogram_318.xml  hsv_histogram_319.xml  hsv_histogram_32.xml  hsv_histogram_320.xml  hsv_histogram_321.xml  hsv_histogram_323.xml  hsv_histogram_325.xml  hsv_histogram_328.xml  hsv_histogram_329.xml  hsv_histogram_33.xml  hsv_histogram_331.xml  hsv_histogram_332.xml  hsv_histogram_334.xml  hsv_histogram_336.xml  hsv_histogram_338.xml  hsv_histogram_340.xml  (+20 more)
globfeat/Blue2/: hsv_histogram_0.xml  hsv_histogram_1.xml  (+80 more)
src/: CMakeLists.txt
src/3party/handtracker/: CMakeLists.txt  Classifier.cpp  Classifier.h  FeatureComputer.cpp  FeatureComputer.hpp  HandDetector.cpp  HandDetector.hpp  LcBasic.cpp  LcBasic.h
src/switch_movie/: Brightness.cpp  Brightness.h  CMakeLists.txt  Graph.h  HeadDetectors.cpp  HeadDetectors.h  PlaneDistance.cpp  PlaneDistance.h  SwitchMovie.cpp  SwitchMovie.h  difference.cpp  difference.h
test/: CMakeLists.txt  camera_calibration.cpp  combining_movie.cpp  crop_movies.cpp  handtracker.cpp  main.cpp  make_human.cpp  merge_movie.cpp  rotate_movie.cpp  save_movies.cpp  set_plane.cpp  switch_movie_csv.cpp  test_SwitchMovie2.cpp  test_brightness.cpp  test_light.cpp  test_model.cpp  test_planeDistance.cpp
(+2207 files in other folders)
